# fastapi-crud-kit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced-features/: index.html
api-reference/: index.html
crud-operations/: index.html
database-setup/: index.html
docs/: advanced-features.md  api-reference.md  crud-operations.md  database-setup.md  getting-started.md  index.md  models.md  query-building.md
examples/example_app/: __init__.py  database.py  main.py  seeds.py
examples/example_app/articles/: models.py  schemas.py
examples/example_app/catalogs/: crud.py  models.py  routes.py  schemas.py
getting-started/: index.html
models/: index.html
query-building/: index.html
search/: search_index.json
src/fastapi_crud_kit/: __init__.py
src/fastapi_crud_kit/crud/: base.py
src/fastapi_crud_kit/crud/manager/: __init__.py  async_manager.py  base.py  sync_manager.py
src/fastapi_crud_kit/database/: __init__.py  exceptions.py
src/fastapi_crud_kit/database/context/: transaction.py
src/fastapi_crud_kit/database/mode/: base.py
src/fastapi_crud_kit/query/: __init__.py  builder.py  config.py  dependencies.py  exceptions.py  parser.py  schema.py  utils.py
src/fastapi_crud_kit/query/fields/: __init__.py  allowed.py  validator.py
src/fastapi_crud_kit/query/filters/: __init__.py  allowed.py  operators.py  parser.py  schema.py  validator.py
tests/: conftest.py
tests/database/: test_async_mode.py  test_sync_mode.py
(+6 files in other folders)
